Updated IntConfEthernetInt screen to allow the user to configure an ethernet interface with three seperate functions -
Description
Duplex Type
Bandwidth.

It functions similar to the Lines Configuration screen within SecurtiyConfMenu.kv/py using checkboxes to dynamically show only required inputs.

Created 3 functions within IntConfEthernetInt to modifiy what widgets are displayed to the user dependening on checkbox selection. This is done using opactity and disabled properties.

Created a function within IntConfEthernetInt to gather user input and configure an ethernet interface within a network device.

Added dynamic resizing of a label inInterfaceSelectionLayout found in MainApplication.kv.

--- a/MainApplication.kv
+++ b/MainApplication.kv
@@ -93,6 +93,8 @@
     spacing: 2
     Label: 
         text: 'Enter Interface Type and Number'
+        text_size: self.width, None
+        height: self.texture_size[1]
     InterfaceTypeSpinnerLayout:
         id: InterfaceTypeSpinnerLayout
     TextInput:
