Added a new float layout within the NetScanWiresharkScreen in NetScanningAndTrafficMonMenu.kv to dynamically inform the user about the traffic capture, it holds two labels. The first label will intially state that no capture has taken place. Once traffic capture has been performed it will then inform the user what interface was used, while the second label will inform the user where the output has been stored.
Added a new pre_enter statement in NetScanWiresharkScreen to execute the newly created function - NetScanWiresharkPopulateNetworkInterfaces() to dynamically fill the network interface spinner.

NetScanningAndTrafficMonMenu.py

Imported two modules to allow for the extraction of network interface names

In the NetScanWiresharkPopulateNetworkInterfaces function two if else statements were added to provide default entries to the capture_interface and total_duration variables in the event the user left them at default/blank.

Added fucntionality to modified the two informational labels during the execution of traffic caputre.

Used the values of netifaces.interfaces() to extract the GUID of the network interfaces. As the main OS for this script is currently Windows OS the get_connection_name_from_guid() function is called to extract the actual name from the registry.

WiresharkCaptureInterfaceSpinner is then populated with the network interfaces.

Implemented a new function get_connection_name_from_guid to extract the interface names from the GUID from the output of netifaces.interfaces(). This is done by examing the registry on windows machines. this function was provided by Gord Thompson.

--- a/Menus/NetScanningAndTrafficMonMenu.kv
+++ b/Menus/NetScanningAndTrafficMonMenu.kv
@@ -39,6 +39,7 @@
 <NetScanWireshark>:
     on_pre_enter: app.current_screen = "Network Scanning and Traffic Monitoring - Wireshark"
     on_pre_enter: app.previous_screen.append('NetScanWiresharkScreen')
+    on_pre_enter: self.NetScanWiresharkPopulateNetworkInterfaces()
     name: 'NetScanWiresharkScreen'
     AnchorLayout:
         anchor_x: 'center'
@@ -48,6 +49,13 @@
             main_menu_root: root
             size_hint: 1, None
             height: 50
+    FloatLayout:  
+        NetScanWiresharkStatusOfMonitorLayout:
+            id: NetScanWiresharkStatusOfMonitorLayout
+            size_hint: 0.9, None
+            pos_hint:{'center_x':0.55, 'y':0.7}
+            main_menu_root: root
+            size_hint: 0.8, None
     FloatLayout:
         #anchor_x: 'center'
         #anchor_y: 'center'
@@ -55,7 +63,7 @@
             id: _Net_Scan_Wireshark_Layout_
             main_menu_root: root
             size_hint: 0.9, None
-            pos_hint:{'center_x':0.55, 'y':0.55}
+            pos_hint:{'center_x':0.55, 'y':0.50}
             main_menu_root: root
             size_hint: 0.8, None
     AnchorLayout:
@@ -69,7 +77,7 @@
                     
 <NetScanWiresharkLayout@GridLayout>:
     orientation: 'vertical'
-    rows: 5
+    rows: 6
     padding: 5
     spacing: 40
     NetScanWiresharkFilenameLayout:
@@ -84,6 +92,9 @@
         id: NetScanWiresharkRingBufferLayout
         opacity: 0
         disabled: True
+
+
+
 
 <NetScanWiresharkFilenameLayout@GridLayout>:
     orientation: 'vertical'
@@ -118,7 +129,7 @@
         height: '32dp'
         sync_height: True
         text: 'Network Interface'
-        values: 'Wifi', 'Input'
+        values: ''
 
 
 <NetScanWiresharkCaptureDurationLayout@GridLayout>:
@@ -226,7 +237,22 @@
  
 		
 		
-		
+<NetScanWiresharkStatusOfMonitorLayout@GridLayout>:
+    orientation: 'vertical'
+    rows: 2
+    spacing: 2
+    Label:
+        id: StatusOfMonitorInterfaceLabel
+        markup: True
+        text: "No Traffic Capture Intitated"
+        text_size: self.width, None
+        #height: self.texture_size[1]
+    Label:
+        id: StatusOfMonitorStorageLabel
+        markup: True
+        text: ""
+        text_size: self.width, None
+        #height: self.texture_size[1]
 		
 		
 		
