Added a label to the top of each screen that will be showcased in the Demo presentation. This label will have texted added to it once the execution of the task is complete to provide user feedback.
It will infom the user that the task has been completed and provide information such as the variable used or the IP address of the device.

In order to facilitate this in the SecurityConfAuxVtyConLinesExecute function two new variables were created - start_line_range and end_line_range. This has also allowed the line_range variable to be made more readable when dealing with a VTY selection

--- a/Menus/BasicConfMenu.kv
+++ b/Menus/BasicConfMenu.kv
@@ -56,15 +56,14 @@
             main_menu_root: root
             size_hint: 1, None
             height: 50
-    AnchorLayout:
-        anchor_x: 'center'
-        anchor_y: 'center'
+    FloatLayout:
+        #anchor_x: 'center'
+        #anchor_y: 'center'
         BasicConfHostnameLayout:
             id: _Basic_Conf_Hostname_Layout_
+            pos_hint:{'center_x':0.5, 'y':0.5}
             main_menu_root: root
             size_hint: 0.9, None
-            #padding: 50
-            #height: root.height - _Menu_Bar.height - _Execute_Button_.height
     AnchorLayout:
         anchor_x: 'center'
         anchor_y: 'bottom'
@@ -86,19 +85,29 @@
         
 <BasicConfHostnameLayout@GridLayout>:
     orientation: 'vertical' 
-    cols: 2
+    rows: 2
     padding: 5
     spacing: 2
-    Label: 
-        text: 'Enter Desired Hostname of Device'
-        size_hint_y: None
-        height: HostnameTextInput.height
-    TextInput:
-        id: HostnameTextInput
-        hint_text:'Device Hostname'
-        multiline: False
-        size_hint_y: None
+    Label:   
+        id: HostnameCompleteLabel
+        markup: True
+        text: ""
         height: '32dp'
+    GridLayout:
+        orientation: 'vertical' 
+        cols: 2
+        padding: 5
+        spacing: 2
+        Label: 
+            text: 'Enter Desired Hostname of Device'
+            size_hint_y: None
+            height: HostnameTextInput.height
+        TextInput:
+            id: HostnameTextInput
+            hint_text:'Device Hostname'
+            multiline: False
+            size_hint_y: None
+            height: '32dp'
     
         
     
