--- a/Menus/NetMonAndManageMenu.kv
+++ b/Menus/NetMonAndManageMenu.kv
@@ -73,9 +73,14 @@
                     
 <NetMonSpanConfLayout@GridLayout>:
     orientation: 'vertical'
-    rows: 3
+    rows: 4
     padding: 5
     spacing: 40
+    Label:   
+        id: SPANCompleteLabel
+        markup: True
+        text: ""
+        height: '32dp'
     NetMonSpanConfSessionNoLayout:
         id: NetMonSpanConfSessionNoLayout
     NetMonSpanConfSourcePortLayout:
